--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime": "7.15.4",
-    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/ip6addr": "^0.2.1",
     "@types/jest": "^28.1.6",
     "@types/jsdom": "^16.2.10",
     "@types/jsoneditor": "^8.6.0",
     "@types/lodash": "^4.14.1",
+    "@types/node": "^18.7.11",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
@@ -46,7 +47,7 @@
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.2",
-    "@vue/vue3-jest": "^28.0.1",
+    "@vue/vue3-jest": "^28.1.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.1.3",
@@ -57,6 +58,7 @@
     "husky": "^4.3.8",
     "is-svg": ">=4.2.2",
     "jest": "^28.1.3",
+    "node": "^16.17.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
     "ssri": ">=8.0.1",
