--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "allowJs": true,
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "node"
     ],
     "typeRoots": [
       "./src/types",
@@ -42,6 +43,7 @@
     "src/**/*.vue"
   ],
   "exclude": [
+    "src/**/__tests__/*.ts",
     "src/**/*.js",
     "src/types/**",
     "node_modules"
