--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@types/jsoneditor": "^8.6.0",
     "@types/lodash": "^4.14.1",
     "@types/node": "^18.7.11",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-router": "~5.0.8",
@@ -58,6 +60,8 @@
     "husky": "^4.3.8",
     "is-svg": ">=4.2.2",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0",
     "node": "^16.17.0",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
@@ -68,9 +72,9 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^28.0.8",
     "ts-node": "^9.1.1",
-    "typescript": "~4.5.5",
+    "typescript": "^4.7.4",
     "url-parse": "^1.5.9",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.70.0",
