--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime": "7.15.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/ip6addr": "^0.2.1",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.0.0",
     "@types/jsdom": "^16.2.10",
     "@types/jsoneditor": "^8.6.0",
     "@types/lodash": "^4.14.1",
@@ -49,23 +49,22 @@
     "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.2",
-    "@vue/vue3-jest": "^28.1.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "@vue/vue3-jest": "^29.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.1.3",
+    "babel-jest": "^29.0.1",
     "eslint": "^7.18.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.5.0",
     "hosted-git-info": "^2.8.9",
     "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
     "is-svg": ">=4.2.2",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
+    "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.1",
     "jsdom": "^20.0.0",
-    "node": "^16.17.0",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
-    "ssri": ">=8.0.1",
+    "sass": "^1.54.7",
+    "sass-loader": "^13.0.2",
+    "ssri": ">=9.0.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
@@ -74,10 +73,10 @@
     "stylelint-webpack-plugin": "^2.1.1",
     "ts-jest": "^28.0.8",
     "ts-node": "^9.1.1",
-    "typescript": "^4.7.4",
+    "typescript": "^4.8.2",
+    "url-loader": "^4.1.1",
     "url-parse": "^1.5.9",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.70.0",
+    "webpack": "^5.74.0",
     "y18n": ">=4.0.1"
   },
   "browserslist": [
