--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,9 @@ out
 # TernJS port file
 .tern-port
 
+# vs code config files
+.vscode
+
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
