--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,16 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
+    "module": "esnext",
     "useDefineForClassFields": true,
-    // "noImplicitThis": true,
     "strict": true,
     "jsx": "preserve",
-    // "isolatedModules": true,
     "importHelpers": true,
-    // "preserveValueImports": true,
-    // Enforce using `import type` instead of `import` for types
-    // "importsNotUsedAsValues": "error",
+    "moduleResolution": "node",
     "skipLibCheck": true,
-    "strictNullChecks": false,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "strictNullChecks": false,
+    "resolveJsonModule": true,
     "sourceMap": true,
     "baseUrl": ".",
     "allowJs": true,
@@ -31,11 +25,9 @@
     "paths": {
       "@/*": [ "./src/*"],
       "@/views/*": [ "./src/views/*" ],
-      "@/doc-editors/*": [ "./src/doc-editors/*" ],
-      "~/*": [ "./src/*" ],
-      "/@/*": ["src/*"],
-      "*":["./src/*"]
+      "@/doc-editors/*": [ "./src/doc-editors/*" ]
     },
+    "forceConsistentCasingInFileNames": true,
     "lib": [
       "esnext",
       "dom",
@@ -52,9 +44,6 @@
   ],
   "exclude": [
     "src/**/__tests__/*.ts",
-   // "src/**/*.js",
-   // "src/types/**",
     "node_modules"
-  ],
-  "files": ["src/ts-shim.d.ts"]
+  ]
 }
