fixing PR remarks
Signed-off-by: aylons <aylons@reblaze.com>

--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
     "webpack": "^5.74.0",
     "y18n": ">=4.0.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint:ts && npm run lint:js:fix && npm run lint:style:fix"
+    }
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
