--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,14 +23,14 @@
       "./node_modules/@types"
     ],
     "paths": {
-      "@/*": [ "./src/*"],
+      "@/*": [ "./src/*"]
     },
     "lib": [
       "esnext",
       "dom",
       "dom.iterable",
       "scripthost"
-    ],
+    ]
   },
   "include": [
     "src/**/*.ts",
