--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -23,58 +23,60 @@
     "core-js": "^3.8.3",
     "jsoneditor": "^9.5.6",
     "lodash": "^4.17.20",
-    "vue": "^2.6.12",
-    "vue-axios": "^2.1.5",
-    "vue-class-component": "^7.2.6",
-    "vue-cli": "^2.9.6",
+    "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
     "vue-lodash": "^2.1.2",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue-router": "^4.1.3",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.18.13",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime": "7.15.4",
-    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/ip6addr": "^0.2.1",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^28.1.3",
     "@types/jsdom": "^16.2.10",
     "@types/jsoneditor": "^8.6.0",
-    "@types/lodash": "^4.14.168",
-    "@vue/cli-plugin-babel": "~5.0.4",
-    "@vue/cli-plugin-eslint": "~5.0.4",
-    "@vue/cli-plugin-router": "~5.0.4",
-    "@vue/cli-plugin-typescript": "^5.0.4",
-    "@vue/cli-service": "~5.0.4",
+    "@types/lodash": "^4.14.1",
+    "@types/node": "^18.7.11",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-typescript": "^10.0.0",
-    "@vue/test-utils": "^1.1.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.18.0",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/vue3-jest": "^28.1.0",
+    "babel-jest": "^28.1.3",
+    "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-vue": "^8.5.0",
     "hosted-git-info": "^2.8.9",
     "husky": "^4.3.8",
+    "identity-obj-proxy": "^3.0.0",
     "is-svg": ">=4.2.2",
-    "jest": "^26.6.3",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
-    "ssri": ">=8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
+    "jsdom": "^20.0.0",
+    "sass": "^1.54.7",
+    "sass-loader": "^13.0.2",
+    "ssri": ">=9.0.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-sass-guidelines": "^7.1.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^28.0.8",
     "ts-node": "^9.1.1",
-    "typescript": "^3.9.7",
+    "typescript": "^4.8.2",
+    "url-loader": "^4.1.1",
     "url-parse": "^1.5.9",
-    "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.70.0",
+    "webpack": "^5.74.0",
     "y18n": ">=4.0.1"
   },
   "husky": {
