--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "is-svg": ">=4.2.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "jest-transform-stub": "^2.0.0",
     "jsdom": "^20.0.0",
     "sass": "^1.54.7",
     "sass-loader": "^13.0.2",
