--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bulma-toast": "^2.3.0",
     "core-js": "^3.8.3",
     "jsoneditor": "^9.5.6",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-lodash": "^2.1.2",
