--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "uplot": "^1.6.22",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
+    "vue-country-flag-next": "^2.3.2",
     "vue-lodash": "^2.1.2",
     "vue-router": "^4.1.3",
     "vuex": "^4.0.2"
