--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@mdi/js": "^5.9.55",
+    "@vuepic/vue-datepicker": "^3.5.0",
     "axios": ">=0.21.2",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
