--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.6.0",
+  "version": "5.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -24,10 +24,12 @@
     "jsoneditor": "^9.5.6",
     "lodash": "^4.17.20",
     "node-polyfill-webpack-plugin": "^2.0.1",
+    "pinia": "^2.0.23",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-lodash": "^2.1.2",
     "vue-router": "^4.1.3",
+    "vue-sidebar-menu": "^5.2.4",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.12.1",
     "@babel/runtime": "7.15.4",
+    "@pinia/testing": "^0.0.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/ip6addr": "^0.2.1",
     "@types/jest": "^28.1.3",
