--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@mdi/js": "^5.9.55",
+    "@vuepic/vue-datepicker": "^3.5.0",
     "axios": ">=0.21.2",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.2",
@@ -25,8 +26,10 @@
     "lodash": "^4.17.20",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pinia": "^2.0.23",
+    "uplot": "^1.6.22",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
+    "vue-country-flag-next": "^2.3.2",
     "vue-lodash": "^2.1.2",
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
