--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "^5.9.55",
     "@mdi/js": "^5.9.55",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vuepic/vue-datepicker": "^3.5.0",
     "axios": ">=0.21.2",
     "bootstrap": "^4.6.0",
@@ -56,13 +57,13 @@
     "@vue/cli-plugin-router": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
-    "@vue/eslint-config-typescript": "^10.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.2",
     "@vue/vue3-jest": "^28.1.0",
     "babel-jest": "^28.1.3",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vue": "^9.7.0",
     "hosted-git-info": "^2.8.9",
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
