--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsoneditor": "^9.5.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "mermaid": "^9.2.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pinia": "^2.0.23",
     "uplot": "^1.6.22",
