--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "5.0.6",
+  "version": "5.0.7",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -17,6 +17,7 @@
     "@mdi/font": "^5.9.55",
     "@mdi/js": "^5.9.55",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@vueform/multiselect": "^2.5.7",
     "@vuepic/vue-datepicker": "^3.5.0",
     "axios": ">=0.21.2",
     "bootstrap": "^4.6.0",
@@ -34,6 +35,7 @@
     "vue-axios": "^3.4.1",
     "vue-country-flag-next": "^2.3.2",
     "vue-lodash": "^2.1.2",
+    "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.1.3",
     "vue-sidebar-menu": "^5.2.4",
     "vuex": "^4.0.2"
